add scroll indicator

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         </ul>
       </div>
     </div>
+    <div class="mouse-icon">
+      <span class="mouse-wheel"></span>
+    </div>
   </section>
   <section id="services">
     <div class="titulo">
