--- a/biblioteca.html
+++ b/biblioteca.html
@@ -9,7 +9,7 @@
   <title>CING</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/responsive.css" />
-  <link rel="stylesheet" href="css/libros.css" />
+  <link rel="stylesheet" href="css/biblioteca.css" />
   <link href="assets/boxicons.min.css" rel="stylesheet" />
   <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
   <script src="js/main.js/"></script>
