mejoras en biblioteca

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -40,22 +40,14 @@
           <ul>
             <li class="list activeList"><a href="#calculo1">Cálculo 1</a></li>
             <li class="list"><a href="#calculo2">Cálculo 2</a></li>
-            <li class="list">
-              <a href="#ecuaciones-diferenciales">Ecuaciones Diferenciales</a>
-            </li>
+            <li class="list"><a href="#ecuaciones-diferenciales">Ecuaciones Diferenciales</a></li>
             <li class="list"><a href="#algebra-lineal">Algebra Lineal</a></li>
             <li class="list"><a href="#fisica">Física</a></li>
             <li class="list"><a href="#isostatica">Isostática</a></li>
             <li class="list"><a href="#isostatica2">Isostática 2</a></li>
-            <li class="list">
-              <a href="#resistencia-de-materiales">Resistencia de Materiales</a>
-            </li>
-            <li class="list">
-              <a href="#resistencia-de-materiales2">Resistencia de Materiales 2</a>
-            </li>
-            <li class="list">
-              <a href="#suelos-y-geotecnia">Suelos y geotecnia</a>
-            </li>
+            <li class="list"><a href="#resistencia-de-materiales">Resistencia de Materiales</a></li>
+            <li class="list"><a href="#resistencia-de-materiales2">Resistencia de Materiales 2</a></li>
+            <li class="list"><a href="#suelos-y-geotecnia">Suelos y geotecnia</a></li>
             <li class="list"><a href="#topografia">Topografía</a></li>
             <li class="list"><a href="#examenes-apuntes">Apuntes y exámenes</a></li>
           </ul>
