--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="img/ico/icon.png" rel="icon" type="image/png">
   <title>CING</title>
+  <link rel="shortcut icon" href="img/ico/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link href="assets/boxicons.min.css" rel="stylesheet">
