se ha añadido blogs

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="img/ico/icon.png" rel="icon" type="image/png">
-  <title>CING</title>
+  <title>CING | Blog</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/blog.css">
@@ -33,7 +33,7 @@
             src="https://i.ytimg.com/vi/Rn9hS7XsJas/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLApY96RmIIOoztnD533fE617ngIqA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=Rn9hS7XsJas&t=152s" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blog/metodos-numericos-para-hp-prime2.html" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
@@ -43,7 +43,7 @@
             src="https://i.ytimg.com/vi/kyPu_rl64so/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCJKZ-iZgsIT-g0049do1XjfHubCA"
             alt="Sample photo">
           <div class="prev">
-            <a href="https://www.youtube.com/watch?v=kyPu_rl64so&t=51s" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blog/metodos-numericos-para-hp-prime1" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
