--- a/biblioteca.html
+++ b/biblioteca.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="img/ico/icon.png" rel="icon" type="image/png" />
-  <title>CING</title>
+  <title>CING | Biblioteca</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/responsive.css" />
   <link rel="stylesheet" href="css/biblioteca.css" />
