--- a/programas-hp-prime.html
+++ b/programas-hp-prime.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="img/ico/icon.png" rel="icon" type="image/png">
-    <title>CING | Programas para hp prime </title>
+    <title>CING | Programas HP-PRIME </title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/hp-prime.css">
