se agregaron archivos

--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
             src="https://i.ytimg.com/vi/Rn9hS7XsJas/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLApY96RmIIOoztnD533fE617ngIqA"
             alt="Sample photo">
           <div class="prev">
-            <a href="blog/metodos-numericos-para-hp-prime2.html" target="_blank"><i class='bx bxl-youtube'></i>Programa de
+            <a href="blog/metodos-numericos-para-hp-prime2" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
             <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
           </div>
