mejoras en el interface

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -471,7 +471,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                <a href="index.html"> <img src="assets/img/en.png" alt="Change to English language"> EN</a>
+                <a href="portfolio-en.html"> <img src="assets/img/en.png" alt="Change to English language"> EN</a>
                 <!-- <br> &copy; 2022 <strong><span>Mario Cesgo Soliz</span></strong> -->
             </div>
         </div>
