--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul>
           <li>Obras civiles</li>
           <li>Cálculos y diseños estructurales</li>
-          <li>Supervición</li>
+          <li>Recursos</li>
         </ul>
       </div>
     </div>
