mejoras en orden de las ventanas

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -21,12 +21,10 @@
 
 <body>
   <!-- <div id="preloader"></div> -->
-  <header>
+  <header class="nav-menu-bar-lib">
     <nav-bar></nav-bar>
-  </header>
-  <section id="library-section">
     <div class="head">
-      <div class="titulo">
+      <div class="title">
         <h1>Biblioteca</h1>
       </div>
       <div class="nav-lib">
@@ -66,6 +64,9 @@
         </div>
       </div>
     </div>
+  </header>
+  <section id="library-section">
+
     <!-- <div id="ulList" class="libContainer"> -->
     <div class="library-container">
       <div class="content-title">
