--- a/programas-hp-prime.html
+++ b/programas-hp-prime.html
@@ -14,6 +14,7 @@
     <script src="js/main.js"></script>
     <script src="src/navbar.js"></script>
     <script src="src/footer-copyrigth.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
