--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <h1><span>CING</span> Ingeniería</h1>
         <br>
         <ul>
-          <li>Obras civiles</li>
-          <li>Cálculos y diseños estructurales</li>
+          <li>Obras Civiles</li>
+          <li>Análisis y Diseño Estructural</li>
           <li>Recursos</li>
         </ul>
       </div>
@@ -55,112 +55,186 @@
   </section>
   <section id="services">
     <div class="titulo">
-      <h1>Servicios</h1>
+      <h2>Servicios</h2>
     </div>
     <div class="services">
-      <div class="card">
-        <img src="img/servicios/01.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/01.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Diseño y cálculo estructural</h1>
+          <h3>Diseño y cálculo estructural</h3>
           <a href="#" class="btn">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/02.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/02.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Modelado BIM</h1>
+          <h3>Modelado BIM</h3>
           <a href="#" class="btn btn-primary btn-block">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/03.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/03.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Supervición de obras civiles</h1>
+          <h3>Supervición de obras civiles</h3>
           <a href="#" class="btn btn-primary btn-block">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/04.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/04.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Diseño geométrico de carreteras</h1>
+          <h3>Diseño geométrico de carreteras</h3>
           <a href="#" class="btn btn-primary btn-block">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/05.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/05.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Consultoría</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <h3>Consultoría</h3>
+          <a href="#" class="btn">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/06.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/06.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Elaboración de proyectos</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <h3>Elaboración de proyectos</h3>
+          <a href="#" class="btn">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/07.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/07.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Diseño arquitectónico</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <h3>Diseño arquitectónico</h3>
+          <a href="#" class="btn">Más información</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/servicios/08.jpg" alt="Sample photo">
+      <div class="card-services">
+        <div class="card-cover">
+          <img src="img/servicios/08.jpg" alt="Sample photo">
+        </div>
         <div class="card-title">
-          <h1>Desarrollo de sofware</h1>
-          <a href="#" class="btn btn-primary btn-block">Más información</a>
+          <h3>Desarrollo de sofware</h3>
+          <a href="#" class="btn">Más información</a>
         </div>
       </div>
     </div>
   </section>
   <section id="projects">
     <div class="titulo">
-      <h1>Proyectos</h1>
+      <h2>Proyectos</h2>
     </div>
     <div class="projects">
-      <div class="card">
-        <img src="img/proyectos/01.jpg" alt="Sample photo">
-        <div class="card-title">
-          <h1>Diseño de vivienda unifamiliar</h1>
+      <div class="card-proj">
+        <div class="image-cover">
+          <img src="img/proyectos/01.jpg" alt="Sample photo">
+        </div>
+        <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
         </div>
-      </div>
-      <div class="card">
-        <img src="img/proyectos/02.jpg" alt="Sample photo">
-        <div class="card-title">
-          <h1>Cálculo estructural de edificio</h1>
-          <button class="btn-card"> Ver proyecto</button>
+        <div class="card-titlep">
+          <h3>Diseño de vivienda unifamiliar</h3>
         </div>
       </div>
-      <div class="card">
-        <img src="img/proyectos/03.jpg" alt="Sample photo">
-        <div class="card-title">
-          <h1>Diseño geométrico de carretera</h1>
+      <div class="card-proj">
+        <div class="image-cover">
+          <img src="img/proyectos/02.jpg" alt="Sample photo">
+        </div>
+        <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
         </div>
+        <div class="card-titlep">
+          <h3>Cálculo estructural de edificio</h3>
+        </div>
       </div>
-      <div class="card">
-        <img src="img/proyectos/04.jpg" alt="Sample photo">
-        <div class="card-title">
-          <h1>Desarrollo web</h1>
+      <div class="card-proj">
+        <div class="image-cover">
+          <img src="img/proyectos/03.jpg" alt="Sample photo">
+        </div>
+        <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
+        </div>
+        <div class="card-titlep">
+          <h3>Diseño geométrico de carretera</h3>
+        </div>
+      </div>
+      <div class="card-proj">
+        <div class="image-cover">
+          <img src="img/proyectos/04.jpg" alt="Sample photo">
+        </div>
+        <div class="hover-effect">
+          <button class="btn-card"> Ver proyecto</button>
+        </div>
+        <div class="card-titlep">
+          <h3>Desarrollo web</h3>
         </div>
       </div>
     </div>
-    <div class="box-modal-project hide">
-      <div class="close-box">
-        <i id="close-box" class="bx bx-x"></i>
-      </div>
-      <!--  -->
+    <div class="box-modal hide">
+        <div class="box-modal-project">
+          <div class="close-box">
+            <i id="close-box" class="bx bx-x"></i>
+          </div>
+          <!-- Slideshow container -->
+          <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+              <div class="numbertext">1 / 3</div>
+              <div class="img-slide">
+                <img src="img/bg-0d1.jpg">
+              </div>
+              <div class="text"></div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext">2 / 3</div>
+              <div class="img-slide">
+                <img src="img/bg-d02.jpg">
+              </div>
+              <div class="text"></div>
+            </div>
+
+            <div class="mySlides fade">
+              <div class="numbertext">3 / 3</div>
+              <div class="img-slide">
+                <img src="img/bdg-03.png">
+              </div>
+              <div class="text"></div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+          <br>
+
+          <!-- The dots/circles -->
+          <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
+        </div>
     </div>
+
 
   </section>
   <section id="contact">
     <div class="titulo">
-      <h1>Contactos</h1>
+      <h2>Contactos</h2>
     </div>
     <div class="contact-container">
       <div class="contact-card">
@@ -185,7 +259,34 @@
     <footer-copyrigth></footer-copyrigth>
   </footer>
   <script>
+let slideIndex = 1;
+showSlides(slideIndex);
 
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
   </script>
 
   <script src="js/main.js"></script>
