--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="mySlides fade">
               <div class="numbertext">1 / 3</div>
               <div class="img-slide">
-                <img src="img/bg-0d1.jpg">
+                <img src="img/bg-0d1.jpg" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -202,7 +202,7 @@
             <div class="mySlides fade">
               <div class="numbertext">2 / 3</div>
               <div class="img-slide">
-                <img src="img/bg-d02.jpg">
+                <img src="img/bg-d02.jpg" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -210,7 +210,7 @@
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <div class="img-slide">
-                <img src="img/bdg-03.png">
+                <img src="img/bdg-03.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
