mejras en el inteface

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     </div>
   </section>
   <section id="services">
+    <span class="span1"></span>
+    <span class="span2"></span>
     <div class="titulo">
       <h2>Servicios</h2>
     </div>
@@ -134,6 +136,8 @@
     </div>
   </section>
   <section id="projects">
+    <span class="span1"></span>
+    <span class="span2"></span>
     <div class="titulo">
       <h2>Proyectos</h2>
     </div>
