--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -41,7 +41,7 @@
         <div class="d-flex flex-column">
             <div class="profile">
                 <img alt="" class="img-fluid rounded-circle" src="assets/img/profile-img.jpg">
-                <h1 class="text-light"><a href="index.html">Mario Cesgo</a></h1>
+                <h1 class="text-light"><a href="index.html">Mario Cesgo</a></h1>         
                 <div class="social-links mt-3 text-center">
                     <a class="facebook" href="#" target="_blank"><i class="bx bxl-facebook"></i></a>
                     <a class="linkedin" href="https://www.linkedin.com" target="_blank"><i
@@ -74,8 +74,9 @@
         <!-- ======= Portada Section ======= -->
         <section class="d-flex flex-column justify-content-center align-items-center" id="portada">
             <div class="portada-container" data-aos="fade-in">
+                <h2>Hola, mi nombre es</h2>
                 <h1>Mario Cesgo Soliz</h1>
-                <!-- <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Researcher"></span></p> -->
+                <h2>Desarrollador web y estudiante en Ingenieria Civil</h2>
             </div>
         </section>
         <!-- End Portada -->
@@ -118,7 +119,7 @@
                                         mariocs855@gmail.com
                                     </li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Web:</strong>
-                                        www.cing1.com</li>
+                                        <a href="https://cing1.github.io/">www.cing1.github.io</a></li>
                                 </ul>
                             </div>
                         </div>
