--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
   <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
     <i class="bx bxl-whatsapp"></i>
   </button>
