--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -40,7 +40,7 @@
     <header id="header">
         <div class="d-flex flex-column">
             <div class="profile">
-                <img alt="" class="img-fluid rounded-circle" src="assets/img/profile-img.jpg">
+                <img alt="" class="img-fluid rounded-circle" src="assets/img/profile.webp">
                 <h1 class="text-light"><a href="index.html">Mario Cesgo</a></h1>         
                 <div class="social-links mt-3 text-center">
                     <a class="facebook" href="#" target="_blank"><i class="bx bxl-facebook"></i></a>
@@ -98,7 +98,7 @@
 
                 <div class="row">
                     <div class="col-lg-4" data-aos="fade-right">
-                        <img alt="" class="img-fluid" src="assets/img/profile-img.jpg">
+                        <img alt="" class="img-fluid" src="assets/img/profile.webp">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                         <h3>INFORMACIÓN PERSONAL</h3>
@@ -241,7 +241,7 @@
                         <div class="proyectos-wrap">
                             <img alt="Web API Templates" class="img-fluid" src="assets/img/proyectos/robots.jpg">
                             <div class="proyectos-links">
-                                <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/robots.jpg" title="Web API Templates"><i class="bx bx-plus"></i></a>
+                                <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/robots.jpg" title="Robot Estructural"><i class="bx bx-plus"></i></a>
                                 <a href="#" title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -255,7 +255,7 @@
                             <div class="proyectos-links">
                                 <a class="venobox" data-gall="proyectosGallery"
                                     href="assets/img/proyectos/arquitectura-moderna.jpg"
-                                    title="Developing safer apps in NodeJS"><i class="bx bx-plus"></i></a>
+                                    title="Proyecto arquitectonico"><i class="bx bx-plus"></i></a>
                                 <a href="#"
                                     title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
@@ -270,7 +270,7 @@
                             <div class="proyectos-links">
                                 <a class="venobox" data-gall="proyectosGallery"
                                     href="assets/img/proyectos/City_Of_Arts_And_Sciences.jpeg"
-                                    title="Blockchain Frameworks"><i class="bx bxs-eyedropper"></i></a>
+                                    title="Diseño Arquitectónico "><i class="bx bxs-eyedropper"></i></a>
                                 <a href="#"
                                     title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
@@ -283,7 +283,7 @@
                             <img alt="Web Personal" class="img-fluid" src="assets/img/proyectos/tekla.jpg">
                             <div class="proyectos-links">
                                 <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/tekla.jpg"
-                                    title="Web Personal"><i class="bx bx-plus"></i></a>
+                                    title="Diseño Estructural"><i class="bx bx-plus"></i></a>
                                 <a href="#" title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -295,7 +295,7 @@
                             <img alt="Red Social Spring" class="img-fluid" src="assets/img/proyectos/MEP-01.jpg">
                             <div class="proyectos-links">
                                 <a class="venobox" data-gall="proyectosGallery" href="assets/img/proyectos/MEP-01.jpg"
-                                    title="Red Social Spring"><i class="bx bx-plus"></i></a>
+                                    title="Modelado BIM"><i class="bx bx-plus"></i></a>
                                 <a href="#" title="Mas detalles"><i
                                         class="bx bx-link"></i></a>
                             </div>
@@ -310,7 +310,9 @@
                             <div class="proyectos-links">
                                 <a class="venobox" data-gall="proyectosGallery"
                                     href="assets/img/proyectos/BIM-Diseno-Geometrico-de-Carreteras.jpg"
-                                    title="Elastic Correlate"><i class="bx bx-plus"></i></a>
+                                    title="Diseño Geomém..ñ...
+                                    
+                                    trico de carreteras"><i class="bx bx-plus"></i></a>
                                 <a href="#"
                                     title="Mas detalles"><i class="bx bx-link"></i></a>
                             </div>
