--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <!-- <div id="preloader"></div> -->
   <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
-    <i class="bx bxl-whatsapp"></i>
+    <i class="icon solid fa-cod"></i>
   </button>
   <header>
     <nav-bar></nav-bar>
@@ -63,7 +63,7 @@
     <div class="services">
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/01.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/01.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Diseño y cálculo estructural</h3>
@@ -72,7 +72,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/02.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/02.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Modelado BIM</h3>
@@ -81,7 +81,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/03.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/03.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Supervición de obras civiles</h3>
@@ -90,7 +90,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/04.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/04.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Diseño geométrico de carreteras</h3>
@@ -99,7 +99,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/05.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/05.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Consultoría</h3>
@@ -108,7 +108,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/06.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/06.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Elaboración de proyectos</h3>
@@ -117,7 +117,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/07.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/07.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Diseño arquitectónico</h3>
@@ -126,7 +126,7 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img src="img/servicios/08.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/servicios/08.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
           <h3>Desarrollo de sofware</h3>
@@ -144,7 +144,7 @@
     <div class="projects">
       <div class="card-proj">
         <div class="image-cover">
-          <img src="img/proyectos/01.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/proyectos/01.jpg" alt="Sample photo">
         </div>
         <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
@@ -155,7 +155,7 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img src="img/proyectos/02.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/proyectos/02.jpg" alt="Sample photo">
         </div>
         <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
@@ -166,7 +166,7 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img src="img/proyectos/03.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/proyectos/03.jpg" alt="Sample photo">
         </div>
         <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
@@ -177,7 +177,7 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img src="img/proyectos/04.jpg" alt="Sample photo">
+          <img loading="lazy" src="img/proyectos/04.jpg" alt="Sample photo">
         </div>
         <div class="hover-effect">
           <button class="btn-card"> Ver proyecto</button>
@@ -199,7 +199,7 @@
             <div class="mySlides fade">
               <div class="numbertext">1 / 3</div>
               <div class="img-slide">
-                <img src="img/bg-0d1.jpg" alt="Sample_photo">
+                <img loading="lazy" src="img/bg-0d1.jpg" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -207,7 +207,7 @@
             <div class="mySlides fade">
               <div class="numbertext">2 / 3</div>
               <div class="img-slide">
-                <img src="img/bg-d02.jpg" alt="Sample_photo">
+                <img loading="lazy" src="img/bg-d02.jpg" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -215,7 +215,7 @@
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <div class="img-slide">
-                <img src="img/bdg-03.png" alt="Sample_photo">
+                <img loading="lazy" src="img/bdg-03.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
