--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <!-- <div id="preloader"></div> -->
   <button type="button" class="btn-float" onclick="window.open('https://wa.me/59174446236','_blank');">
-    <i class="icon solid fa-cod"></i>
+    <i class="bx bxl-whatsapp"></i>
   </button>
   <header>
     <nav-bar></nav-bar>
