--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
     <div class="projects">
       <div class="card-proj">
         <div class="image-cover">
+          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/01.png" alt="Sample photo">
+        </div>
+        <div class="hover-effect">
+          <button class="btn-card"> Ver proyecto</button>
+        </div>
+        <div class="card-titlep">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+        </div>
+      </div>
+      <div class="card-proj">
+        <div class="image-cover">
           <img loading="lazy" src="img/proyectos/01.jpg" alt="Sample photo">
         </div>
         <div class="hover-effect">
@@ -187,6 +198,7 @@
         </div>
       </div>
     </div>
+
     <div class="box-modal hide">
         <div class="box-modal-project">
           <div class="close-box">
@@ -199,7 +211,7 @@
             <div class="mySlides fade">
               <div class="numbertext">1 / 3</div>
               <div class="img-slide">
-                <img loading="lazy" src="img/bg-0d1.jpg" alt="Sample_photo">
+                <img loading="lazy" src="img/proyectos/bahria_grand_hotel/01.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -207,7 +219,7 @@
             <div class="mySlides fade">
               <div class="numbertext">2 / 3</div>
               <div class="img-slide">
-                <img loading="lazy" src="img/bg-d02.jpg" alt="Sample_photo">
+                <img loading="lazy" src="img/proyectos/bahria_grand_hotel/02.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -215,7 +227,7 @@
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <div class="img-slide">
-                <img loading="lazy" src="img/bdg-03.png" alt="Sample_photo">
+                <img loading="lazy" src="img/proyectos/bahria_grand_hotel/03.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
@@ -225,15 +237,10 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
           </div>
           <br>
-
-          <!-- The dots/circles -->
-          <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-          </div>
         </div>
     </div>
+
+
 
 
   </section>
@@ -264,6 +271,11 @@
     <footer-copyrigth></footer-copyrigth>
   </footer>
   <script>
+
+
+
+let icard = document.getElementsByClassName("btn-card")
+console.log(icard)
 let slideIndex = 1;
 showSlides(slideIndex);
 
