--- a/blog.html
+++ b/blog.html
@@ -41,85 +41,95 @@
     <div class="blog-container">
       <div class="blogs">
         <div class="blog-card" id="08">
+          <div class="blog-title">
+            <a href="blog/calculadora-secciones-acero" target="_blank"><i class='bx bxs-calculator'></i>Calculadora de secciones de acero de construcción</a>
+            <h2>Programa para determinar la combinación de aceros necesaria para cubrir la sección de aceros requeridos para el diseño de secciones de hormigón a flexión, corte, compresión, etc.</h2>
+            <h3><i class='bx bxs-calendar-alt'></i>14 Enero, 2023</h3>
+          </div>
           <img
-            src="https://i.ytimg.com/vi/Rn9hS7XsJas/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLApY96RmIIOoztnD533fE617ngIqA"
+            src="blog/img/calculadora-acero.jpeg"
             alt="Sample photo">
+        </div>
+        <div class="blog-card" id="08">
           <div class="blog-title">
             <a href="blog/metodos-numericos-para-hp-prime2" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
+            </div>
+            <img
+              src="blog/img/metodos2.jpeg"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="07">
-          <img
-            src="https://i.ytimg.com/vi/kyPu_rl64so/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCJKZ-iZgsIT-g0049do1XjfHubCA"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="blog/metodos-numericos-para-hp-prime1" target="_blank"><i class='bx bxl-youtube'></i>Programa de
               métodos numéricos para calculadora HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
+            </div>
+            <img
+              src="blog/img/metodos1.jpeg"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="06">
-          <img
-            src="https://i.ytimg.com/vi/66ZuwmUFo4E/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp6Wlg-NXZqlMf0xkUo3wlvd41iw"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=66ZuwmUFo4E" target="_blank"><i class='bx bxl-youtube'></i>Interpolación de curvas
               de nivel | Programa HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>11 abr, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/66ZuwmUFo4E/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCp6Wlg-NXZqlMf0xkUo3wlvd41iw"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="05">
-          <img
-            src="https://i.ytimg.com/vi/kxmyn1-Xzp0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCuUmbsM4NkffxnA5o3jWiSk74OWA"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=kxmyn1-Xzp0" target="_blank"><i class='bx bxl-youtube'></i>Cómo pasar dibujos desde
               AutoCad a la calculadora HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>5 abr, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/kxmyn1-Xzp0/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCuUmbsM4NkffxnA5o3jWiSk74OWA"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="04">
-          <img
-            src="https://i.ytimg.com/vi/Ay6xStz7Bug/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDT4RWT7ekfKMntnnjNzfIkn2Kkng"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=Ay6xStz7Bug" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de propiedades
               geométricas | Programa HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>2 abr, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/Ay6xStz7Bug/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDT4RWT7ekfKMntnnjNzfIkn2Kkng"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="03">
-          <img
-            src="https://i.ytimg.com/vi/lLLRIZwkF0s/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBWSiXIeH7akutJoRWT1E5_JkSPhw"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=lLLRIZwkF0s&t=1s" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de escalas
               | Programa HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>28 feb, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/lLLRIZwkF0s/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBWSiXIeH7akutJoRWT1E5_JkSPhw"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="02">
-          <img
-            src="https://i.ytimg.com/vi/-0iDc3fONWA/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAqQ_2pJ_UyHBxBt-OBSw1a_Jr7XA"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=-0iDc3fONWA" target="_blank"><i class='bx bxl-youtube'></i>Cálculo de ladrillos |
               Programa HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>21 feb, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/-0iDc3fONWA/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAqQ_2pJ_UyHBxBt-OBSw1a_Jr7XA"
+              alt="Sample photo">
         </div>
         <div class="blog-card" id="01">
-          <img
-            src="https://i.ytimg.com/vi/xoCraOj0c3g/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCvfngMLtLttlP7YkRkgHtD1mT7hA"
-            alt="Sample photo">
           <div class="blog-title">
             <a href="https://www.youtube.com/watch?v=xoCraOj0c3g" target="_blank"><i class='bx bxl-youtube'></i>Implementación de
               interface gráfica para calcular
               áreas en HP-PRIME</a>
-            <h3><i class='bx bxs-calendar-alt'></i>23 may, 2022</h3>
-          </div>
+              <h3><i class='bx bxs-calendar-alt'></i>19 feb, 2022</h3>
+            </div>
+            <img
+              src="https://i.ytimg.com/vi/xoCraOj0c3g/hqdefault.jpg?sqp=-oaymwEcCPYBEIoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCvfngMLtLttlP7YkRkgHtD1mT7hA"
+              alt="Sample photo">
         </div>
       </div>
     </div>
