--- a/biblioteca.html
+++ b/biblioteca.html
@@ -21,12 +21,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZZGM99SKG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-  
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-  
       gtag('config', 'G-0ZZGM99SKG');
     </script>
 </head>
@@ -36,7 +34,7 @@
     <nav-bar></nav-bar>
     <div class="head">
       <div class="title">
-        <h1>Biblioteca</h1>
+        <h1>Biblioteca ING. CIVL</h1>
       </div>
       <div class="nav-lib">
         <div class="libList contentHide">
