--- a/index.html
+++ b/index.html
@@ -100,24 +100,6 @@
       </div>
       <div class="card-services">
         <div class="card-cover">
-          <img loading="lazy" src="img/servicios/05.jpg" alt="Sample photo">
-        </div>
-        <div class="card-title">
-          <h3>Consultoría</h3>
-          <a href="#" class="btn">Más información</a>
-        </div>
-      </div>
-      <div class="card-services">
-        <div class="card-cover">
-          <img loading="lazy" src="img/servicios/06.jpg" alt="Sample photo">
-        </div>
-        <div class="card-title">
-          <h3>Elaboración de proyectos</h3>
-          <a href="#" class="btn">Más información</a>
-        </div>
-      </div>
-      <div class="card-services">
-        <div class="card-cover">
           <img loading="lazy" src="img/servicios/07.jpg" alt="Sample photo">
         </div>
         <div class="card-title">
@@ -145,59 +127,95 @@
     <div class="projects">
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/01.png" alt="Sample photo">
+          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/bahira-gran-hotel.png" alt="Sample photo">
         </div>
-        <div class="hover-effect">
-          <button class="btn-card"> Ver proyecto</button>
-        </div>
-        <div class="card-titlep">
+        <div class="card-proj-footer">
           <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
         </div>
       </div>
       <div class="card-proj">
         <div class="image-cover">
           <img loading="lazy" src="img/proyectos/01.jpg" alt="Sample photo">
         </div>
-        <div class="hover-effect">
-          <button class="btn-card"> Ver proyecto</button>
-        </div>
-        <div class="card-titlep">
-          <h3>Diseño de vivienda unifamiliar</h3>
+        <div class="card-proj-footer">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
         </div>
       </div>
       <div class="card-proj">
         <div class="image-cover">
           <img loading="lazy" src="img/proyectos/02.jpg" alt="Sample photo">
         </div>
-        <div class="hover-effect">
-          <button class="btn-card"> Ver proyecto</button>
-        </div>
-        <div class="card-titlep">
-          <h3>Cálculo estructural de edificio</h3>
+        <div class="card-proj-footer">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
         </div>
       </div>
       <div class="card-proj">
         <div class="image-cover">
           <img loading="lazy" src="img/proyectos/03.jpg" alt="Sample photo">
         </div>
-        <div class="hover-effect">
-          <button class="btn-card"> Ver proyecto</button>
-        </div>
-        <div class="card-titlep">
-          <h3>Diseño geométrico de carretera</h3>
+        <div class="card-proj-footer">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
         </div>
       </div>
       <div class="card-proj">
         <div class="image-cover">
           <img loading="lazy" src="img/proyectos/04.jpg" alt="Sample photo">
         </div>
-        <div class="hover-effect">
-          <button class="btn-card"> Ver proyecto</button>
-        </div>
-        <div class="card-titlep">
-          <h3>Desarrollo web</h3>
+        <div class="card-proj-footer">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
         </div>
       </div>
+      <div class="card-proj">
+        <div class="image-cover">
+          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/bahira-gran-hotel.png" alt="Sample photo">
+        </div>
+        <div class="card-proj-footer">
+          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <div class="card-footer1">
+            <div class="tecnologias">
+              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
+              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
+            </div>
+            <button class="btn-card" title="Ver proyecto"><i class="bx bxs-photo-album"></i></button>
+          </div>
+        </div>
+      </div>
+ 
     </div>
 
     <div class="box-modal hide">
@@ -212,7 +230,7 @@
             <div class="mySlides fade">
               <div class="numbertext">1 / 3</div>
               <div class="img-slide">
-                <img loading="lazy" src="img/proyectos/bahria_grand_hotel/01.png" alt="Sample_photo">
+                <img loading="lazy" src="img/proyectos/bahria_grand_hotel/bahira-gran-hotel.png" alt="Sample_photo">
               </div>
               <div class="text"></div>
             </div>
