--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0ZZGM99SKG"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
+    window.dataLayer == window.dataLayer || [];
 
     function gtag() {
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
-
     gtag('config', 'G-0ZZGM99SKG');
   </script>
 </head>
@@ -145,7 +144,7 @@
           <img loading="lazy" src="img/proyectos/01.jpg" alt="Sample photo">
         </div>
         <div class="card-proj-footer">
-          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <h3>Diseño arquitectónico de vivienda unifamiliar</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
@@ -160,7 +159,7 @@
           <img loading="lazy" src="img/proyectos/02.jpg" alt="Sample photo">
         </div>
         <div class="card-proj-footer">
-          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <h3>Análisis estructural de un edificio</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
@@ -175,7 +174,7 @@
           <img loading="lazy" src="img/proyectos/03.jpg" alt="Sample photo">
         </div>
         <div class="card-proj-footer">
-          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <h3>Diseño geométrico de una carretera</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="">
@@ -190,7 +189,7 @@
           <img loading="lazy" src="img/proyectos/04.jpg" alt="Sample photo">
         </div>
         <div class="card-proj-footer">
-          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <h3>Desarrollo de páginas web</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
@@ -205,7 +204,7 @@
           <img loading="lazy" src="img/proyectos/bahria_grand_hotel/bahira-gran-hotel.png" alt="Sample photo">
         </div>
         <div class="card-proj-footer">
-          <h3>Modelado estructural 'Bahria Grand Hotel'</h3>
+          <h3>Diseño estructural</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit">
