--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
   </section>
   <section id="services">
-    <span class="span1"></span>
+    <video autoplay muted loop class="video-background"> <source src="assets/Pexels Videos 2450250.mp4" type="video/mp4"></video>
     <span class="span2"></span>
     <div class="titulo">
       <h2>Servicios</h2>
@@ -118,7 +118,7 @@
     </div>
   </section>
   <section id="projects">
-    <span class="span1"></span>
+    <video autoplay muted loop class="video-background"> <source src="assets/production ID_4514359.mp4" type="video/mp4"></video>
     <span class="span2"></span>
     <div class="titulo">
       <h2>Proyectos</h2>
