--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   </header>
   <section id="home">
     <div class="banner">
+      <div class="stars-falls"></div>
       <div class="home-text">
         <h1><span>CING</span> Ingeniería</h1>
         <br>
@@ -118,7 +119,7 @@
     </div>
   </section>
   <section id="projects">
-    <video autoplay muted loop class="video-background"> <source src="assets/production ID_4514359.mp4" type="video/mp4"></video>
+    <video autoplay muted loop class="video-background"> <source src="assets/pexels-evgenia-kirpichnikova-5955755.mp4" type="video/mp4"></video>
     <span class="span2"></span>
     <div class="titulo">
       <h2>Proyectos</h2>
