correccion de errores ortograficos

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -34,7 +34,7 @@
     <nav-bar></nav-bar>
     <div class="head">
       <div class="title">
-        <h1>Biblioteca ING. CIVL</h1>
+        <h1>Biblioteca ING. CIVIL</h1>
       </div>
       <div class="nav-lib">
         <div class="libList contentHide">
