--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/02.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/tinglado/01.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
-          <h3>Diseño arquitectónico de vivienda unifamiliar</h3>
+          <h3>Modelado de tinglado</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
@@ -251,10 +251,10 @@
             </div>
             <div id="proj2" class="projs hide">
               <div class="img-slide fade">
-                <img class="imgs" loading="lazy" src="img/servicios/01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/04.png" alt="Sample_photo" />
+                <img class="imgs" loading="lazy" src="img/proyectos/tinglado/01.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/02.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/03.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/tinglado/04.jpg" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
