--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="projects">
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/01.png" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/01.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
           <h3>Modelado estructural 'Bahria Gran Hotel'</h3>
@@ -165,7 +165,7 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/03.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/diseno_estructural/03.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
           <h3>Análisis estructural de un edificio</h3>
@@ -182,7 +182,7 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/03.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/diseno_geometrico/01_diseno_geometrico.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
           <h3>Diseño geométrico de una carretera</h3>
@@ -199,10 +199,10 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/04.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/modelado_arquetecnico/01_modelado_arquitectonico.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
-          <h3>Desarrollo de páginas web</h3>
+          <h3>Modelado arquitectónico</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
@@ -216,10 +216,10 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/bahria_grand_hotel/bahira-gran-hotel.png" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
-          <h3>Diseño estructural</h3>
+          <h3>Desarrollo de página web</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
