fix darkMode: gitstatus q Q

--- a/biblioteca.html
+++ b/biblioteca.html
@@ -8,6 +8,7 @@
   <link href="img/ico/icon.png" rel="icon" type="image/png" />
   <title>CING | Biblioteca</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/dark-mode.css" />
   <link rel="stylesheet" href="css/responsive.css" />
   <link rel="stylesheet" href="css/biblioteca.css" />
   <link href="assets/boxicons.min.css" rel="stylesheet" />
