--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
   <link href="img/ico/icon.png" rel="icon" type="image/png">
   <title>CING | Blog</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/dark-mode.css">
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/blog.css">
   <link href="assets/boxicons.min.css" rel="stylesheet">
