--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/diseno_estructural/03.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium01.jpg" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
-          <h3>Análisis estructural de un edificio</h3>
+          <h3>Modelado de edificio Stanley Condominium</h3>
           <div class="card-footer1">
             <div class="tecnologias">
               <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
-              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="" />
+              <!-- <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="" /> -->
             </div>
             <button class="btn-card" onclick="boxModal(3)" title="Ver proyecto">
               <i class="bx bxs-photo-album"></i>
@@ -260,11 +260,10 @@
             </div>
             <div id="proj3" class="projs hide">
               <div class="img-slide fade">
-                <img class="imgs" loading="lazy" src="img/servicios/01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/04.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/05.png" alt="Sample_photo" />
+                <img class="imgs" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium01.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium02.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium03.jpg" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/stanley_condominium/stanley_condominium04.jpg" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
