--- a/index.html
+++ b/index.html
@@ -182,14 +182,13 @@
       </div>
       <div class="card-proj">
         <div class="image-cover">
-          <img loading="lazy" src="img/proyectos/diseno_geometrico/01_diseno_geometrico.jpg" alt="Sample photo" />
+          <img loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" alt="Sample photo" />
         </div>
         <div class="card-proj-footer">
-          <h3>Diseño geométrico de una carretera</h3>
+          <h3>Modeladode puente en Autodesk Infraworks</h3>
           <div class="card-footer1">
             <div class="tecnologias">
-              <img src="img/ico/autocad-lockup-610x66-removebg-preview.png" title="Autocad" alt="" />
-              <img src="img/ico/revit-lockup-610x66-removebg-preview.png" title="Revit" alt="revit" />
+              <img src="img/ico/infraworks-lockup-610x66__1_-removebg-preview.png" title="Autocad" alt="" />
             </div>
             <button class="btn-card" onclick="boxModal(4)" title="Ver proyecto">
               <i class="bx bxs-photo-album"></i>
@@ -269,12 +268,10 @@
             </div>
             <div id="proj4" class="projs hide">
               <div class="img-slide fade">
-                <img class="imgs" loading="lazy" src="img/servicios/01.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/02.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/03.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/04.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/05.png" alt="Sample_photo" />
-                <img class="imgs imgHide" loading="lazy" src="img/servicios/06.png" alt="Sample_photo" />
+                <img class="imgs" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks01.png" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks02.png" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks03.png" alt="Sample_photo" />
+                <img class="imgs imgHide" loading="lazy" src="img/proyectos/modelado_de_puente_en_Infraworks/guozihou_bridge_infraworks04.png" alt="Sample_photo" />
               </div>
               <div class="text"></div>
             </div>
